# RayTracing

./: .gitignore  Algorithms.py  Atmosphere.py  Constants.py  Coordinates.py  Equations.py  Field.py  GIS.py  GeneralTests.py  Initialize.py  LICENSE  LISCENSE  Parallel.py  PathTests.py  Paths.py  Plans.md  README.md  RayTracingSolutions.nb  SystemState.py  Tracer.py  Vector.py  constants.py  initialize.py  main.py  package.json  requirements.txt  run.py  run_shell.txt  tracing.py
SavedData/: CurrentParams.txt  CurrentParams50_0_10000.txt  CurrentParams50_0_16000.txt  Gradient.txt  Gradient50_0_10000.txt  Gradient50_0_16000.txt  Gradient_1000.txt  Matrix.txt  Matrix100_0_18000.txt  Matrix50_0_10000.txt  Matrix50_0_16000.txt  Matrix_1000.txt
atmosphere/: __init__.py  base.py  chapman.py  quasi_parabolic.py
atmospheres/: __init__.py  base.py  implementations.py
core/: __init__.py  constants.py  coordinates.py  equations.py  initialize.py  parallel.py  path.py  plotting.py  testing.py  tracing.py  vector.py
exploration/: YpPtVisualization.py
initialize/: initializer.py  quasi_parabolic.py
magnetic/: __init__.py  base.py  dipole.py  zero.py
magnetic_fields/: __init__.py  base.py  implementation.py  implementations.py
mathematica/: AtmosphereGroundTruth.nb  MagneticFieldGroundTruth.nb  NewConversionsNotes.nb  ParameterTestCalculations.nb  PathDistanceDerivativeCalculation.nb  PathHeightsCalculation.nb  RayTracingSolutions.nb  VerifyEquations.nb
paths/: __init__.py  base.py  (+2 more)
rustion/: Cargo.toml
rustion/src/: equations.rs  interface.rs  lib.rs  solver.rs
(+55 files in other folders)
