[package]
name = "rustion"
version = "0.1.0"
authors = ["msdrigg <msdrigg@clemson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-rand = "0.11"
ndarray = { version = "0.14.0", features = ["blas"] }
blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9", default-features = false, features = ["cblas", "system"] }
argmin = { version = "0.3.1", features = ["ctrlc", "ndarrayl"] }
