[package]
name = "rustion"
version = "0.1.0"
authors = ["msdrigg <msdrigg@clemson.edu>"]
edition = "2018"

[lib]
name = "rustion"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
ndarray-rand = "0.11"
numpy = "0.13"
ndarray = { version = "0.14.0", features = ["blas"] }
blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9", default-features = false, features = ["cblas", "system"] }
argmin = { version = "0.3.1", features = ["ctrlc", "ndarrayl"] }
